manifest-node-exporter/01-Node-exporter-deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  labels:
    app: node-exporter
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
      name: node-exporter
    spec:
      serviceAccountName: prometheus
      containers:
      - image: prom/node-exporter
        name: node-exporter
        ports:
        - containerPort: 9200
          hostPort: 9200
          name: scrape
        volumeMounts:
        - name: data-disk
          mountPath: /data-disk
          readOnly: true
        - name: root-disk
          mountPath: /root-disk
          readOnly: true
      volumes:
        - name: data-disk
          hostPath:
            path: /localdata
        - name: root-disk
          hostPath:
            path: /
      hostNetwork: true
      hostPID: true
