manifest-node-exporter/02-Node-exporter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter3
spec:
  selector:
    app: node-exporter3
  type: LoadBalancer  # Change this from NodePort to LoadBalancer
  ports:
    - port: 9200
      targetPort: 9200
